--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<link ref = "stylesheet" href = "style.css">
+		<link rel = "stylesheet" href = "style.css">
 		<title>Hi, my princess!</title>
 	</head>
 	<body>
-	<h1>pula</h1>
+		 <img src = "bleu_cat.gif" class = "cat">
+		 <h1 class = "questions"> Will you be my valentine?</h1>
+		 <div class = "answers1">
+			<button class = "yes1">YES!!!</button>
+			<button class = "no1">NO!!!</button>
+		 </div>
 	</body>
 </html>
