--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 	<head>
 		<meta charset = "utf-8">
 		<link rel = "stylesheet" href = "style.css">
-		<title>Hi, my princess!</title>
+		<title>Hi, my  princess!</title>
 	</head>
 	<body>
-		 <img src = "bleu_cat.gif" class = "cat">
+		 <img src = "media/bleu_cat.gif" class = "cat">
 		 <h1 class = "questions"> Will you be my valentine?</h1>
 		 <div class = "answers1">
-			<button class = "yes1">YES!!!</button>
-			<button class = "no1">NO!!!</button>
+			<button id = "yes1">YES!!!</button>
+			<button id = "no1">NO!!!</button>
 		 </div>
+		 <script src = "script.js"></script>
 	</body>
 </html>
